--- a/01_tabuada.html
+++ b/01_tabuada.html
@@ -7,11 +7,21 @@
     */
 
     //Entrada
+    const num = Number(prompt("informe qual numero deseja calcular a tabuada"))
+
+    let multiplicadores = [1, 2, 3, 4, 5, 6, 7, 8, 9];
+    let resultado;
+    let resultados = []
 
 
     //Processamento
+    for(let item of multiplicadores){
+        resultado = (num * item)
+        resultados.push(resultado)
+    }
 
 
     //Saída
+    alert(`${resultados}`)
     
 </script>
