--- a/03_identificarCaracteres.html
+++ b/03_identificarCaracteres.html
@@ -6,11 +6,25 @@
     */
 
     //Entrada
+    const palavra = prompt("informe uma palavra").toLowerCase()
+
+    let vogais = 0;
+    let consoantes = 0;
 
 
     //Processamento
+    for(let item of palavra){
+        if(item == "a" || item == "e" || item == "i" || item == "o" || item == "u"){
+           vogais++
+        }
+        else{
+            consoantes++
+        }
+    }
+
 
 
     //Saída
+    alert(`vogais : ${vogais} \n consoantes : ${consoantes}`)
 
 </script>
