--- a/06_comprasMercado.html
+++ b/06_comprasMercado.html
@@ -7,11 +7,20 @@
     */
 
     //Entrada
+    let lista = ["A", "E", 2, 4.8, "CINQUENTA", "Araquari", 80, 10, 3.2];
+
+    let soma = 0;
 
 
     //Processamento
+    for(let item of lista){
+        if(!isNaN(item)){
+            soma = soma + item
+        }
+    }
 
 
     //Saída
+    alert(`A soma dos numeros é igual a ${soma}`)
 
 </script>
